fix grid gap problems add .inline-border-box class

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,11 @@ a {
   text-decoration: none;
 }
 
+.inline-border-box {
+  display: inline;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   overflow: hidden;
@@ -56,10 +61,8 @@ body {
 }
 
 .black-nav .menu-black ul {
-  display: inline;
   padding: 2px;
   margin: 5px;
-  box-sizing: border-box;
   list-style-type: none;
 }
 
@@ -68,10 +71,8 @@ body {
 }
 
 .black-nav .menu-black ul li {
-  display: inline;
-  padding: 2px;
-  margin: 5px;
-  box-sizing: border-box;
+  padding: 0 2px;
+  margin: 0 5px;
 }
 
 .main footer .gray .social-media li a {
@@ -112,14 +113,10 @@ body {
 }
 
 .white-nav .menu-white ul {
-  display: inline;
-  box-sizing: border-box;
   list-style-type: none;
 }
 
 .white-nav .menu-white ul li {
-  display: inline;
-  box-sizing: border-box;
   list-style-type: none;
 }
 
@@ -413,6 +410,7 @@ body {
 .wrapper .news .frame {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto;
+  grid-gap: 12px;
   display: flex;
   padding: 0;
   margin: 0;
@@ -425,7 +423,7 @@ body {
   flex-basis: 100%;
   height: 75px;
   max-width: 100%;
-  padding: 8px;
+  padding: 8px 0px;
 }
 
 .wrapper .big-cards .card1 ul .picture {
@@ -971,14 +969,10 @@ body {
 
   .white-nav .menu-white ul {
     list-style-type: none;
-    display: inline;
-    box-sizing: border-box;
   }
 
   .white-nav .menu-white ul li {
     list-style-type: none;
-    display: inline;
-    box-sizing: border-box;
   }
 
   .white-nav .menu-white .icons li {
@@ -1029,14 +1023,10 @@ body {
 
   .white-nav .menu-white ul {
     list-style-type: none;
-    display: inline;
-    box-sizing: border-box;
   }
 
   .white-nav .menu-white ul li {
     list-style-type: none;
-    display: inline;
-    box-sizing: border-box;
   }
 
   .white-nav .menu-white .icons li {
@@ -1067,12 +1057,13 @@ body {
   .wrapper .funding .card-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 12px;
   }
 
   .wrapper .news .frame .card-container {
-    padding: 12px;
     height: auto;
     flex-flow: column;
+    padding: 0;
   }
 
   .wrapper .deals ul .card .picture {
@@ -1110,10 +1101,7 @@ body {
   .wrapper .deals ul .card {
     display: flex;
     flex-flow: column;
-  }
-
-  .wrapper .funding .card-container .card {
-    margin: 12px;
+    padding: 0;
   }
 
   .wrapper .big-cards {
@@ -1131,6 +1119,8 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto;
+    grid-gap: 12px;
+    padding: 0;
   }
 
   .wrapper .deals ul .card h4 {
@@ -1186,12 +1176,13 @@ body {
   .wrapper .funding .card-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 12px;
   }
 
   .wrapper .news .frame .card-container {
-    padding: 12px;
     height: auto;
     flex-flow: column;
+    padding: 0;
   }
 
   .wrapper .deals ul .card .picture {
@@ -1234,10 +1225,7 @@ body {
   .wrapper .deals ul .card {
     display: flex;
     flex-flow: column;
-  }
-
-  .wrapper .funding .card-container .card {
-    margin: 12px;
+    padding: 0;
   }
 
   .wrapper .funding .card-container .final {
@@ -1259,6 +1247,8 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: auto;
+    grid-gap: 12px;
+    padding: 0;
   }
 
   .wrapper .deals ul .card h4 {
